[tool.poetry]
name = "comfyui-pixel"
version = "0.1.0"
description = ""
authors = ["Brandon Wand <wandbrandon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
