[tool.poetry]
name = "comfyui-pixel"
version = "0.1.0"
description = ""
authors = ["Brandon Wand <wandbrandon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.4"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
scipy = "^1.13.0"
hitherdither = { git = "https://www.github.com/hbldh/hitherdither" }
colour-science = "^0.4.4"
scikit-learn = "^1.4.1.post1"
kmedoids = "^0.5.1"
scikit-image = "^0.22.0"
colormath = "^3.0.0"
scikit-learn-extra = "^0.3.0"
setuptools = "^69.2.0"
deltae = "^1.1.2"
kornia = "^0.7.2"
tqdm = "^4.66.2"
alive-progress = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
