[tool.poetry]
name = "comfyui-pixel"
version = "0.1.0"
description = "pixel art workshop nodes for comfyui."
authors = ["Brandon Wand <wandbrandon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.4"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.2"
kmedoids = "^0.5.1"
scikit-image = "^0.22.0"
setuptools = "^69.2.0"
deltae = "^1.1.2"
kornia = "^0.7.2"
tqdm = "^4.66.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
